--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <span class="logo">
+                <img src="Asset/Logo.png" alt="">
+                <h5>Master Card</h5>
+            </span>
+            <img src="Asset/Chip.png" alt="" class="chip">
+        </header>
+    </div>
 </body>
 </html>
