--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
             </span>
             <img src="Asset/Chip.png" alt="" class="chip">
         </header>
+        <div class="card-details">
+            <div class="name-number">
+                <h6>Card Number</h6>
+                <h5 class="number">
+                    1411 2345 1171 1421
+                </h5>
+            </div>
+        </div>
     </div>
 </body>
 </html>
