--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <h5 class="number">
                     1411 2345 1171 1421
                 </h5>
+                <h5 class="name">Raditya Mulya Akbar</h5>
+            </div>
+            <div class="valid-date">
+                <h6>Valid Thru</h6>
+                <h5>12/24</h5>
             </div>
         </div>
     </div>
